# Factory-de-Odoo

./: CLAUDE.md  README.md  install.py
python/: pyproject.toml
python/.planning/: model_registry.json
python/.planning/diagrams/: project_dependencies.mmd
python/src/amil_utils/: cli.py  context7.py  hooks.py  migration_generator.py  renderer.py  renderer_context.py  renderer_context_fields.py  renderer_orchestration.py  renderer_stages.py  spec_differ.py  spec_differ_stages.py  spec_schema.py  spec_schema_inner.py  version_diff.py
python/src/amil_utils/commands/: mermaid.py  render.py  (+1 more)
python/tests/: test_api_private.py  test_bulk_renderer.py  test_cli_validate.py  test_commands_extend.py  test_commands_misc.py  test_commands_registry_cmds.py  test_commands_registry_helpers.py  test_dev_instance.py  test_docker_integration.py  test_e2e_github.py  test_integration_e2e.py  test_kb_validator.py  test_manifest.py  test_mcp_rate_limiter.py  test_mcp_server.py  test_module_name_validation.py  test_multi_company.py  test_odoo_ls_client.py  test_odoo_ls_config.py  test_odoo_ls_fixer.py  test_odoo_ls_integration.py  test_odoo_ls_types.py  test_persistent_docker.py  test_persistent_docker_sanitize.py  test_portal_renderer.py  test_preprocessor_approval.py  test_preprocessor_archival.py  test_preprocessor_audit.py  test_preprocessor_bulk_operations.py  test_preprocessor_constraints.py  test_preprocessor_document_management.py  test_preprocessor_extensions.py  test_preprocessor_registry.py  test_preprocessor_webhooks.py  test_render_stages.py  test_renderer.py  test_renderer_context.py  test_renderer_utils.py  test_semantic_validation.py  test_spec_schema.py  (+3 more)
python/tests/orchestrator/: test_coherence.py  test_concurrent_writes.py  test_config.py  test_dependency_graph.py  test_deprecation_markers.py  test_module_status.py  test_parallel_executor.py  test_phase.py  test_registry.py
(+61 files in other folders)
