[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amil-utils"
version = "0.1.0"
description = "Python utilities for Amil Odoo module generation"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jinja2>=3.1,<4.0",
    "click>=8.0,<9.0",
    "pylint-odoo>=10.0,<11.0",
    "deepdiff>=8.0,<9.0",
    "pydantic>=2.10,<3.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.9,<2.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.0",
]
pakistan = [
    "phonenumbers>=8.13,<10.0",
]
search = [
    "chromadb>=1.5,<2.0",
    "PyGithub>=2.8",
    "gitpython>=3.1",
]
odoo-ls = []

[project.scripts]
amil-utils = "amil_utils.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amil_utils"]

[tool.hatch.build.targets.wheel.force-include]
"src/amil_utils/data" = "amil_utils/data"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures/docker_test_module"]
markers = [
    "e2e: End-to-end tests hitting real external services (GitHub API, ChromaDB). Skipped without GITHUB_TOKEN.",
    "e2e_slow: Full OCA index build (200+ repos, 3-5 min). Requires GITHUB_TOKEN.",
    "docker: Integration tests requiring Docker daemon. Skipped when Docker is unavailable.",
    "odoo_ls: Integration tests requiring odoo_ls_server binary and Odoo 19.0 source.",
    "timeout: mark test with timeout",
]

[tool.coverage.run]
source = ["src/amil_utils"]
omit = ["*/tests/*", "*/.venv/*", "*/fixtures/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
